--- a/TM.RazorSharedUI/Views/Shared/Inputs/_SelectPartial.cshtml
+++ b/TM.RazorSharedUI/Views/Shared/Inputs/_SelectPartial.cshtml
@@ -2,24 +2,26 @@
 
 @model SelectViewModel
 
-<div class="col @Model.ClassName">
-	@if (Model.IsLabelVisible)
-	{
-		<label for='@Model.Id' class='form-label fs-5 fw-bold'>@Model.Title</label>
-	}
+<div class="@Model.ClassName py-3">
+	<div class="col @Model.ClassName">
+		@if (Model.IsLabelVisible)
+		{
+			<label for='@Model.Id' class='form-label fs-5 fw-bold'>@Model.Title</label>
+		}
 
-	<div class="@Model.InputContainerClassName ">
-		<select class="form-control " name="@Model.Name" id="@Model.Id">
-			@if (Model.Options != null && Model.Options.Any())
-			{
-				@foreach (var option in Model.Options)
+		<div class="@Model.InputContainerClassName ">
+			<select class="form-control form-select" name="@Model.Name" id="@Model.Id">
+				@if (Model.Options != null && Model.Options.Any())
 				{
-					<option value="@option.Value">
-						@option.Label
-					</option>
+					@foreach (var option in Model.Options)
+					{
+						<option value="@option.Value">
+							@option.Label
+						</option>
+					}
 				}
-			}
-		</select>
+			</select>
+		</div>
+		<span id='@Model.NotifId' class="text-danger text-sm"></span>
 	</div>
-	<span id='@Model.NotifId' class="text-danger text-sm"></span>
 </div>
