refactor: revert to support only .net 8  - modified the ui classes

--- a/TM.RazorSharedUI/Views/Shared/Inputs/_SelectPartial.cshtml
+++ b/TM.RazorSharedUI/Views/Shared/Inputs/_SelectPartial.cshtml
@@ -3,25 +3,23 @@
 @model SelectViewModel
 
 <div class="@Model.ClassName py-3">
-	<div class="col @Model.ClassName">
-		@if (Model.IsLabelVisible)
-		{
-			<label for='@Model.Id' class='form-label fs-5 fw-bold'>@Model.Title</label>
-		}
+	@if (Model.IsLabelVisible)
+	{
+		<label for='@Model.Id' class='form-label fs-5 fw-bold'>@Model.Title</label>
+	}
 
-		<div class="@Model.InputContainerClassName ">
-			<select class="form-control form-select" name="@Model.Name" id="@Model.Id">
-				@if (Model.Options != null && Model.Options.Any())
+	<div class="@Model.InputContainerClassName ">
+		<select class="form-select" name="@Model.Name" id="@Model.Id">
+			@if (Model.Options != null && Model.Options.Any())
+			{
+				@foreach (var option in Model.Options)
 				{
-					@foreach (var option in Model.Options)
-					{
-						<option value="@option.Value">
-							@option.Label
-						</option>
-					}
+					<option value="@option.Value">
+						@option.Label
+					</option>
 				}
-			</select>
-		</div>
-		<span id='@Model.NotifId' class="text-danger text-sm"></span>
+			}
+		</select>
 	</div>
+	<span id='@Model.NotifId' class="text-danger text-sm"></span>
 </div>
