Feature common fields (#1)
* feat: new field
 - added datefield viewmodel and partial

fixed:
 - call className property in Radio Buttons container

* project: changed the root namespace and project sln name

refactor: modified the layout of radiogroup part
 - added row class

build:
 - perform build 1.0.9

--- a/TM.RazorSharedUI/Views/Shared/Inputs/_RadioGroupPartial.cshtml
+++ b/TM.RazorSharedUI/Views/Shared/Inputs/_RadioGroupPartial.cshtml
@@ -3,7 +3,7 @@
 
 @model RadioGroupViewModel
 
-<div class="row mb-3">
+<div class="mb-3">
 	<div class="row text-start py-3">
 		<label class="col-12 col-lg-4 col-xl-3 form-label fs-5 fw-bold me-3">Password Options</label>
 		<div class="col-12 col-lg btn-group" role="group" aria-label="Basic radio toggle button group">
@@ -22,21 +22,22 @@
 		</div>
 	</div>
 
-	<div id="@Model.Id" class="row m-0 bg-gray-100 rounded-3" style="display: none;">
-
-		@if (Model.RadioGroupButtons != null && Model.RadioGroupButtons.Any())
-		{
-			@foreach (var button in Model.RadioGroupButtons)
+	<div id="@Model.Id" class="collapse @Model.ClassName" style="display: none;">
+		<div class="row ">
+			@if (Model.RadioGroupButtons != null && Model.RadioGroupButtons.Any())
 			{
-				@if (button.Elements != null && button.Elements.Any())
+				@foreach (var button in Model.RadioGroupButtons)
 				{
-					@foreach (var element in button.Elements)
+					@if (button.Elements != null && button.Elements.Any())
 					{
-						@await Html.RenderAsync(element)
+						@foreach (var element in button.Elements)
+						{
+							@await Html.RenderAsync(element)
+						}
 					}
 				}
 			}
-		}
+		</div>
 	</div>
 </div>
 
